<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainLayout">

    <TextView
        android:id="@+id/gameNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name"
        android:textColor="@color/brown"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/scoreLayout"
        style="@style/textLayoutStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@+id/gameNameTextView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/score_textView"
            style="@style/textStyle"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scoreValue_textView"
            style="@style/valuesStyle"
            android:text="0" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bestLayout"
        style="@style/textLayoutStyle"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scoreLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/textStyle"
            android:text="@string/best" />

        <TextView
            android:id="@+id/bestScoreValue_textview"
            style="@style/valuesStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0" />
    </LinearLayout>

    <TextView
        android:id="@+id/gameExplainTextView2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/gameExplain"
        android:textColor="@color/brown"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newGameButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/background_button"
        android:text="@string/newGame"
        android:textColor="@color/White"
        app:layout_constraintBottom_toTopOf="@+id/gridlayout"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        app:columnCount="4"
        android:background="@drawable/background_gridlayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameExplainTextView2"
        app:rowCount="4"
        style="@style/cellsStyle">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell1"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell2"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell3"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell4"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell5"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell6"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell7"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell8"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell9"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell10"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell11"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell12"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell13"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell14"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell15"
            style="@style/cellsStyle"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cell16"
            style="@style/cellsStyle"
            android:gravity="center" />

    </androidx.gridlayout.widget.GridLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameExplainTextView2" />

</androidx.constraintlayout.widget.ConstraintLayout>